--- a/index.html
+++ b/index.html
@@ -144,14 +144,13 @@
 						<div class="row">
 							<div class="panel">
 								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
+									<div class="panel-title">第一块</div>
 								</div>
 								<div class="panei-body my-con-panel1 clearfix">
 									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
 									<div class="col-xs-10">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+											@import和link的区别;<br>
+											行元素和块元素;
 									</div>
 								</div>
 								<div class="panel-footer clearfix">
@@ -179,14 +178,15 @@
 						<div class="row">
 							<div class="panel">
 								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
+									<div class="panel-title">第二块</div>
 								</div>
 								<div class="panei-body my-con-panel1 clearfix">
 									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
 									<div class="col-xs-10">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+										currentStyle;IE里面获取内部或者外部样式表. <br>
+										getComputedStyle();兼容火狐和GOOGLE; <br>
+										document.documentElement.scrollTop;document.documentElement.scrollLeft;
+										只兼容IE；在火狐和GOOGLE里面为0；
 									</div>
 								</div>
 								<div class="panel-footer clearfix">
@@ -214,14 +214,14 @@
 						<div class="row">
 							<div class="panel">
 								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
+									<div class="panel-title">第三块</div>
 								</div>
 								<div class="panei-body my-con-panel1 clearfix">
 									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
 									<div class="col-xs-10">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+										数组的属性：1. length;<br>
+										数组的方法：pop(), push(), shift(), unshift(), indexOf(),
+										slice(), splice(), sort(), reverse();
 									</div>
 								</div>
 								<div class="panel-footer clearfix">
@@ -249,14 +249,19 @@
 						<div class="row">
 							<div class="panel">
 								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
+									<div class="panel-title">第四块</div>
 								</div>
 								<div class="panei-body my-con-panel1 clearfix">
 									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
 									<div class="col-xs-10">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+										$(this).index()取得下标;
+										$('li').index(document.getElementById('bar'));传递一个DOM对象，
+										返回这个对象在原先集合中的索引位置 <br>
+										$('li').index($('#bar'));传递一个jQuery对象 <br>
+										$('li').index($('li:gt(0)')); 传递一组jQuery对象，
+										返回这个对象中第一个元素在原先集合中的索引位置 <br>
+										$('#bar').index('li'); 传递一个选择器，返回#bar在所有li中的做引位置 <br>
+										$('#bar').index(); 不传递参数，返回这个元素在同辈中的索引位置。
 									</div>
 								</div>
 								<div class="panel-footer clearfix">
@@ -287,17 +292,17 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<div class="panel-title">
-								今日热门
+								页面跳转
 							</div>
 						</div>
 						<div class="panel-body">
 							<ol>
-								<li><a href="">白岩松：我经历的三次磨难</a></li>
-								<li><a href="">波尔图：如你所有的浪漫</a></li>
-								<li><a href="">周五早间市场信息</a></li>
-								<li><a href="">我国人民如此沉迷喝热水</a></li>
-								<li><a href="">游资反复抢两类股的反弹</a></li>
-								<li><a href="">古代打仗时真的是武将先单挑吗</a></li>
+								<li><a href="index.html">bootstrap的页面搭建</a></li>
+								<li><a href="page2.html">html5+css3新特效</a></li>
+								<li><a href="page3.html">原生JS单个ul瀑布流实例</a></li>
+								<li><a href="page4.html">jquery简单概括</a></li>
+								<li><a href="page5.html">angularJS的小demo</a></li>
+								<li><a href="page6.html">后台php+mysql学习</a></li>
 							</ol>
 						</div>
 					</div>
@@ -379,8 +384,8 @@
 				<li><a href="page4.html">4</a></li>
 				<li><a href="page5.html">5</a></li>
 				<li><a href="page6.html">6</a></li>
-				<li><a href="page8.html">>></a></li>
-				<li><a href="page8.html">尾页</a></li>
+				<li><a href="page2.html">>></a></li>
+				<li><a href="page6.html">尾页</a></li>
 			</ul>
 		</div>
 	</div>
