--- a/page5.html
+++ b/page5.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/global.css" type="text/css">
     <link rel="stylesheet" href="css/page5.css">
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
     <!--[if lt IE 9]>
     <script src="./js/html5shiv.js"></script>
     <script src="./js/respond.js"></script>
     <![endif]-->
 </head>
-<body>
+<body style="background:#fff;">
 <!--头部导航-->
 <nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
     <div class="container">
@@ -40,6 +42,271 @@
     </div>
 </nav>
 <!--内容开始-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="list-group">
+                <a href="page5.html" class="list-group-item active">用户管理</a>
+                <a href="page55.html" class="list-group-item">用户搜索</a>
+                <a href="" role="button"  class="list-group-item" data-toggle="modal" data-target="#myModal">添加用户</a>
+            </div>
+        </div>
+        <div class="col-md-10">
+            <div class="page-header">
+                <h2>用户管理</h2>
+            </div>
+            <ul class="nav nav-tabs">
+                <li class="active">
+                    <a href="page5.html">用户列表</a>
+                </li>
+                <li>
+                    <a href="page55.html">用户搜索</a>
+                </li>
+                <li>
+                    <a href="" role="button" data-toggle="modal" data-target="#myModal">添加用户</a>
+                </li>
+            </ul>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>用户名</th>
+                    <th>邮箱</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>张三</td>
+                    <td>123456789@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>李四</td>
+                    <td>121265489@maiziedu.com</td>
+                    <td>
+                        <div role="presentation" class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                操作<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">编辑</a></li>
+                                <li><a href="#">删除</a></li>
+                                <li><a href="#">锁定</a></li>
+                                <li><a href="#">修改密码</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">添加用户</h4>
+            </div>
+            <div class="modal-body">
+                <form action="#">
+                    <div class="form-group">
+                        <label for="addname">用户名</label>
+                        <input type="text" id="addname" class="form-control" placeholder="用户名">
+                    </div>
+                    <div class="form-group">
+                        <label for="addpassword">用户密码</label>
+                        <input type="text" id="addpassword" class="form-control" placeholder="请输入用户密码">
+                    </div>
+                    <div class="form-group">
+                        <label for="addpassword1">确认用户密码</label>
+                        <input type="text" id="addpassword1" class="form-control" placeholder="请确认输入用户密码">
+                    </div>
+                    <div class="form-group">
+                        <label for="addemail">请输入用户邮箱</label>
+                        <input type="email" id="addemail" class="form-control" placeholder="请输入用户邮箱">
+                    </div>
+                    <div class="form-group">
+                        <label for="addyonghuzu">所属用户组</label>
+                        <select id="addyonghuzu" class="form-control">
+                            <option>限制会员</option>
+                            <option>新手上路</option>
+                            <option>组册会员</option>
+                            <option>中级会员</option>
+                            <option>高级会员</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">提交</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--内容结束-->
 <!--尾部分页-->
@@ -64,4 +331,5 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/page5.js"></script>
+<script type="text/javascript" src="js/holder.min.js"></script>
 </html>
